--- a/css/contacto.css
+++ b/css/contacto.css
@@ -70,7 +70,7 @@ main {
     flex-direction: column;
  }
  
- h2 {
+ h1 {
     color: rgb(4, 21, 53);
     font-size:xx-large;
     padding-top: 20px;
@@ -214,4 +214,23 @@ footer p {
 }
 .bi {
     color: black;
+}
+
+@media screen and (max-width: 768px) {
+    header img {
+        height: 15%; 
+    }
+
+    .header-div nav ul li a {
+        font-size: 1em; 
+    }
+
+    .div-index {
+        font-size: 1em; 
+    }
+
+    footer p {
+        padding-top: 30px; 
+        padding-bottom: 30px; 
+    }
 }
