--- a/css/style.css
+++ b/css/style.css
@@ -127,12 +127,13 @@ footer p {
 @media screen and (max-width:480) {
 
     .header{
-        display:inline-block;
+        display:block;
+        flex-direction: column;
     }
 
    .header img {
-        height: 20%;
-        width: 0%;
+        height: 5%;
+        width: 30%;
         padding-top: 5px;
         padding-left: 5px;
     }
@@ -145,27 +146,21 @@ footer p {
     }
 
     .header-div nav {
-        display:inline-block;
-        gap: 5px;
-    }
-  .header-div nav li {
-    display: inline-block;
-  }
+        display:block;
+        flex-direction: column;
+        gap: 5px;}
 
 
     .header-div nav ul li a {
         display: inline-block;
-        font-size:1.4em;
+        font-size:1em;
     }
 
 .div-index {
-    font-size: 1.4em;
+    font-size: 1em;
 }
 
     footer {
-        font-weight: 300;
-        font-size: small;
-        color: brown;
         display:block;
         width: 100%;
         justify-content: space-between;
@@ -179,6 +174,21 @@ gap: 2px;
 
 }
 
-@media scree and (max-width: 768px){
+@media screen and (max-width: 768px) {
+    header img {
+        height: 15%; 
+    }
 
+    .header-div nav ul li a {
+        font-size: 1em; 
+    }
+
+    .div-index {
+        font-size: 1em; 
+    }
+
+    footer p {
+        padding-top: 30px; 
+        padding-bottom: 30px; 
+    }
 }
